add query param to search by title prefix